# Videoinfo

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  VideoInfo.cpp  VideoInfo.h  main.cpp
